# AIChatApp

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: check_package_sizes.py  clean_pycache.py  export_requirements.py  generate_arch_docs.py  generate_pipeline_graphs.py  generate_project_tree.py  lint_project.py  pipeline_summary.py
src/: database.py  deps.py  lifespan.py  logger.py  schemas.py  utils.py
src/api_router/: __init__.py  chat_router.py  user_router.py
src/clients/: llm_client.py
src/config/: config.yml
src/llms/: __init__.py  aws_bedrock.py  base.py  google.py  groq.py  huggingface.py  llamacpp.py  llm_factory.py  llm_parser.py  nvidia.py  ollama.py  vllm.py
src/pipelines/: builder.py  nodes.py  pipeline_state.py
src/services/: models.py
tests/: conftest.py  test_chat_routes.py  test_main.py  test_user_routes.py  test_utils.py
