[project]
name = "aichatapp"
version = "0.1.0"
description = "AI Chat App"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.127.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.40.0",
]


[project.scripts]
start = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]