[project]
name = "aichatapp"
version = "0.1.0"
description = "AI Chat App"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "gunicorn>=23.0.0",
    "motor>=3.7.1",
    "openai>=2.14.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]


[project.scripts]
start = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
